Fix styling issues on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,6 @@
   }
 
   #mobile-email-submit {
-    display: inline;
+    display: block;
   }
 }
