--- a/css/new-age.css
+++ b/css/new-age.css
@@ -424,7 +424,7 @@ footer ul li a.active {
   border-radius: 300px;
 }
 .btn-xl {
-  padding: 15px 45px;
+  padding: 15px 30px;
   font-size: 11px;
 }
 ::-moz-selection {
